--- a/.github/workflows/aws-nuke.yml
+++ b/.github/workflows/aws-nuke.yml
@@ -47,13 +47,7 @@ jobs:
           echo AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY >> $GITHUB_ENV
 
       - name: Validate Inputs
-        run: |
-          echo "Validating inputs..."
-          
-          # Mask sensitive inputs
-          echo "::add-mask::${{ inputs.AWS_ACCESS_KEY_ID }}"
-          echo "::add-mask::${{ inputs.AWS_SECRET_ACCESS_KEY }}"
-          
+        run: |  
           # Check if confirmation is provided
           if [ "${{ inputs.CONFIRM_NUKE }}" != "true" ]; then
             echo "ERROR: You must confirm that you understand this will DELETE ALL RESOURCES"
@@ -75,7 +69,7 @@ jobs:
           
           echo "Input validation passed"
    
-      - name: Verify AWS Credentials
+      - name: Verify AWS Creds for the account to be nuked
         run: |
           aws sts get-caller-identity
           CALLER_ACCOUNT=$(aws sts get-caller-identity --query Account --output text)
@@ -98,7 +92,7 @@ jobs:
           sed -i "s/AWS_ACCOUNT_ID_PLACEHOLDER/${{ inputs.AWS_ACCOUNT_ID }}/g" aws-nuke-config.yaml
           echo "Config file updated for account ${{ inputs.AWS_ACCOUNT_ID }}"
         
-      - name: List Resources to be Deleted
+      - name: Dry Run AWS Nuke (Before Nuking)
         run: |
           echo "Listing resources that will be deleted (dry-run)..."
           aws-nuke --config aws-nuke-config.yaml --access-key-id ${AWS_ACCESS_KEY_ID} --secret-access-key ${AWS_SECRET_ACCESS_KEY} --force > resources-before.txt 2>&1 || true
@@ -127,18 +121,14 @@ jobs:
           
           echo "AWS Nuke execution completed"
 
-      - name: Verify Account is Clean
+      - name: Dry Run AWS Nuke (After Nuking)
         if: always()
         run: |
-          echo "Verifying account is clean..."
           
-          # List resources after nuke (dry-run)
-          echo "Listing resources after nuke (dry-run)..."
           aws-nuke --config aws-nuke-config.yaml --access-key-id ${AWS_ACCESS_KEY_ID} --secret-access-key ${AWS_SECRET_ACCESS_KEY} --force > resources-after.txt 2>&1 || true
           echo "Resources after nuke:"
           cat resources-after.txt
           
-          # Extract counts from after dry-run output
           if grep -q "Scan complete:" resources-after.txt; then
             TOTAL_AFTER=$(grep "Scan complete:" resources-after.txt | grep -o '[0-9]* total' | grep -o '[0-9]*')
             NUKEABLE_AFTER=$(grep "Scan complete:" resources-after.txt | grep -o '[0-9]* nukeable' | grep -o '[0-9]*')
@@ -188,10 +178,47 @@ jobs:
           echo "- **Access Key ID:** ${AWS_ACCESS_KEY_ID:0:4}****${AWS_ACCESS_KEY_ID: -4}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           
+          # Add comparison results to summary
+          if [ -f resources-before.txt ] && [ -f resources-after.txt ]; then
+            if grep -q "Scan complete:" resources-before.txt && grep -q "Scan complete:" resources-after.txt; then
+              TOTAL_BEFORE=$(grep "Scan complete:" resources-before.txt | grep -o '[0-9]* total' | grep -o '[0-9]*')
+              NUKEABLE_BEFORE=$(grep "Scan complete:" resources-before.txt | grep -o '[0-9]* nukeable' | grep -o '[0-9]*')
+              FILTERED_BEFORE=$(grep "Scan complete:" resources-before.txt | grep -o '[0-9]* filtered' | grep -o '[0-9]*')
+              
+              TOTAL_AFTER=$(grep "Scan complete:" resources-after.txt | grep -o '[0-9]* total' | grep -o '[0-9]*')
+              NUKEABLE_AFTER=$(grep "Scan complete:" resources-after.txt | grep -o '[0-9]* nukeable' | grep -o '[0-9]*')
+              FILTERED_AFTER=$(grep "Scan complete:" resources-after.txt | grep -o '[0-9]* filtered' | grep -o '[0-9]*')
+              
+              DELETED_TOTAL=$((TOTAL_BEFORE - TOTAL_AFTER))
+              DELETED_NUKEABLE=$((NUKEABLE_BEFORE - NUKEABLE_AFTER))
+              
+              echo "### Resource Comparison" >> $GITHUB_STEP_SUMMARY
+              echo "" >> $GITHUB_STEP_SUMMARY
+              echo "| Metric | Before | After | Deleted |" >> $GITHUB_STEP_SUMMARY
+              echo "|--------|--------|-------|---------|" >> $GITHUB_STEP_SUMMARY
+              echo "| **Total Resources** | $TOTAL_BEFORE | $TOTAL_AFTER | $DELETED_TOTAL |" >> $GITHUB_STEP_SUMMARY
+              echo "| **Nukeable Resources** | $NUKEABLE_BEFORE | $NUKEABLE_AFTER | $DELETED_NUKEABLE |" >> $GITHUB_STEP_SUMMARY
+              echo "| **Filtered Resources** | $FILTERED_BEFORE | $FILTERED_AFTER | - |" >> $GITHUB_STEP_SUMMARY
+              echo "" >> $GITHUB_STEP_SUMMARY
+              
+              if [ "$TOTAL_AFTER" -eq 0 ]; then
+                echo "### ✅ Complete Success" >> $GITHUB_STEP_SUMMARY
+                echo "All resources have been successfully deleted!" >> $GITHUB_STEP_SUMMARY
+              elif [ "$NUKEABLE_AFTER" -eq 0 ]; then
+                echo "### ✅ Nukeable Resources Deleted" >> $GITHUB_STEP_SUMMARY
+                echo "All nukeable resources have been deleted. $FILTERED_AFTER filtered resources remain (protected by config)." >> $GITHUB_STEP_SUMMARY
+              else
+                echo "### ⚠️ Partial Success" >> $GITHUB_STEP_SUMMARY
+                echo "$NUKEABLE_AFTER nukeable resources still exist and could not be deleted. These may have dependencies or protection enabled." >> $GITHUB_STEP_SUMMARY
+              fi
+              echo "" >> $GITHUB_STEP_SUMMARY
+            fi
+          fi
+          
           if [ "${{ job.status }}" == "success" ]; then
-            echo "Success" >> $GITHUB_STEP_SUMMARY
-            echo "AWS Nuke execution completed successfully." >> $GITHUB_STEP_SUMMARY
+            echo "### Execution Status" >> $GITHUB_STEP_SUMMARY
+            echo "✅ **SUCCESS** - AWS Nuke execution completed successfully." >> $GITHUB_STEP_SUMMARY
           else
-            echo "Failed" >> $GITHUB_STEP_SUMMARY
-            echo "AWS Nuke execution failed. Check the logs for details." >> $GITHUB_STEP_SUMMARY
+            echo "### Execution Status" >> $GITHUB_STEP_SUMMARY
+            echo "❌ **FAILED** - AWS Nuke execution failed. Check the logs for details." >> $GITHUB_STEP_SUMMARY
           fi
