--- a/.github/workflows/aws-nuke.yml
+++ b/.github/workflows/aws-nuke.yml
@@ -66,7 +66,7 @@ jobs:
     steps:
       - name: Manual Approval Required
         run: |
-          =echo "**Account ID:** ${{ inputs.AWS_ACCOUNT_ID }}"
+          echo "**Account ID:** ${{ inputs.AWS_ACCOUNT_ID }}"
           echo "**AWS User:** ${{ needs.validate.outputs.caller-user }}"
           echo ""
           echo ""
