--- a/.github/workflows/aws-nuke.yml
+++ b/.github/workflows/aws-nuke.yml
@@ -76,9 +76,9 @@ jobs:
 
       - name: Download AWS Nuke Tool
         run: |
-          wget -c https://github.com/rebuy-de/aws-nuke/releases/download/v2.25.0/aws-nuke-v2.25.0-linux-amd64.tar.gz -O - | sudo tar -xz -C /usr/local/bin
-          sudo mv /usr/local/bin/aws-nuke-v2.25.0-linux-amd64 /usr/local/bin/aws-nuke
-          sudo chmod +x /usr/local/bin/aws-nuke
+          wget -c https://github.com/rebuy-de/aws-nuke/releases/download/v2.25.0/aws-nuke-v2.25.0-linux-amd64.tar.gz -O - | tar -xz -C /usr/local/bin
+          mv /usr/local/bin/aws-nuke-v2.25.0-linux-amd64 /usr/local/bin/aws-nuke
+          chmod +x /usr/local/bin/aws-nuke
           aws-nuke version
 
       - name: Mask Credentials
@@ -92,7 +92,8 @@ jobs:
   
       - name: Install yq
         run: |
-          wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+          wget -c https://github.com/mikefarah/yq/releases/download/v4.47.2/yq_linux_amd64.tar.gz -O - | tar -xz -C /usr/local/bin
+          mv /usr/local/bin/yq_linux_amd64 /usr/local/bin/yq
           chmod +x /usr/local/bin/yq
           yq --version
 
