--- a/.github/workflows/aws-nuke.yml
+++ b/.github/workflows/aws-nuke.yml
@@ -58,7 +58,7 @@ jobs:
   approval:
     runs-on: ubuntu-latest
     needs: validate
-    environment: wait-for-approval
+    # environment: wait-for-approval
     steps:
       - name: Manual Approval Required
         run: |
